🔨 Fix compile errors

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "redis": "^4.6.6",
+    "stripe": "^8.174.0",
     "validator": "^13.9.0"
   }
 }
