--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,14 +22,21 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^6.0.1",
-    "http-status-codes": "^2.2.0",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22",
     "redis": "^4.6.6",
     "stripe": "^8.174.0",
     "validator": "^13.9.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "eslint": "^8.44.0",
+    "http-status-codes": "^2.2.0",
+    "jest": "^29.6.1",
+    "nodemon": "^2.0.22",
+    "prettier": "^3.0.0",
+    "supertest": "^6.3.3"
   }
 }
