--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,5 +23,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-#       - name: Run tests
-#         run: npm test
+
+      - name: Run Prettier
+        run: npm run prettier:fix
+
+      # - name: Run tests
+      #   run: npm test
