--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,9 +26,9 @@ jobs:
 
       - name: Run Prettier
         run: npm run prettier:fix
-        
+
       - name: Build Project
-        - run: npm run build --if-present
+        run: npm run build --if-present
 
       # - name: Run tests
       #   run: npm test
