--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 PORT=
 
-MONGO_URI=
+MONGO_URI=mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+1.6.1
 
 TOKEN_SECRET=
 
