--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "nodemon": "^2.0.22",
     "prettier": "^3.0.0",
     "supertest": "^6.3.3"
+  },
+  "jest":{
+    "collectCoverage":true
   }
+
 }
