--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "jest",
+    "test": "jest tests/auth/auth.api.test --forceExit",
     "prettier": "prettier --check **/*.js",
     "prettier:fix": "prettier --write \"./**/*.{js,jsx,json}\""
   },
@@ -28,17 +28,22 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
+    "package": "^1.0.1",
     "redis": "^4.6.6",
     "stripe": "^8.174.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
     "chai": "^4.3.7",
-    "eslint": "^8.44.0",
     "http-status-codes": "^2.2.0",
     "jest": "^29.6.1",
+    "mongodb-memory-server": "^8.13.0",
+    "mongodb-memory-server-core": "^8.13.0",
     "nodemon": "^2.0.22",
     "prettier": "^3.0.0",
     "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
