✅ Tests are done

--- a/.env.sample
+++ b/.env.sample
@@ -5,5 +5,7 @@ MONGO_URI=
 # Random String for encryption
 TOKEN_SECRET=
 
-# Optional if cash is only used
+# Optional
 STRIPE_SECRET_KEY=
+
+REDIS_SECRET_PASS=
