--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,12 +1,6 @@
 name: Node.js CI
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: push
 
 jobs:
   build:
@@ -30,5 +24,9 @@ jobs:
       - name: Build Project
         run: npm run build --if-present
 
-      # - name: Run tests
-      #   run: npm test
+      - name: Run tests
+        env:
+          MONGO_URI: ${{ secrets.MONGO_URI }}
+          TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
+          REDIS_SECRET_PASS: ${{ secrets.REDIS_SECRET_PASS }}
+        run: npm test
