--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "eCommerce API",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "test": "jest tests/order/order.api.test --forceExit",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest tests/ --forceExit",
     "prettier": "prettier --check **/*.js",
     "prettier:fix": "prettier --write \"./**/*.{js,jsx,json}\""
   },
@@ -36,14 +36,18 @@
   "devDependencies": {
     "chai": "^4.3.7",
     "http-status-codes": "^2.2.0",
+    "ioredis": "^5.3.2",
+    "ioredis-mock": "^8.8.3",
     "jest": "^29.6.1",
     "mongodb-memory-server": "^8.13.0",
     "mongodb-memory-server-core": "^8.13.0",
     "nodemon": "^2.0.22",
     "prettier": "^3.0.0",
+    "redis-mock": "^0.56.3",
     "supertest": "^6.3.3"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "maxWorkers": 1
   }
 }
